# market_intelligence_app

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  app.py  config.yaml  debug_trace_search.py  env.template  pyproject.toml  requirements.txt  test_components.ipynb  test_database_attr.py  test_mlflow_tracing.ipynb  test_mlflow_tracing.py
.streamlit/: config.toml
databricks/aws/0/: meta.yaml
scripts/: clear_conversations.py  create_db_role.py  create_static_db_user.py  list_lakebase_instances.py  setup_database_role.sql  test_db_connection.py
src/: __init__.py  config.py  database.py  databricks_client.py  mlflow_tracing.py  pdf_generator.py
tests/: INTEGRATION_TESTS.md  __init__.py  conftest.py  test_config.py  test_database.py  test_databricks_client.py  test_integration.py
