[project]
name = "market-intelligence-app"
version = "0.1.0"
description = "Market Intelligence Streamlit App with Databricks Integration"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.40.0",
    "streamlit>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.0",
    "mlflow>=2.10.0",
    "openai>=1.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipykernel>=6.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (require live connections)",
]
# Run unit tests by default, skip integration tests unless explicitly requested
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

